@startuml vlxd-class-diagram
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam packageStyle rectangle

title Lược đồ lớp (theo domain) — VLXD

package "vlxd_product" {
    class Danhmucsp {
        +Madm: INT [PK]
        +Tendm: VARCHAR
        +Mota: VARCHAR
        +getProductList(): array
    }

    class Nhacungcap {
        +Mancc: VARCHAR [PK]
        +Tenncc: VARCHAR
        +Sdtncc: VARCHAR
        +Diachincc: VARCHAR
        +getSupplyHistory(): array
    }

    class Nguyenvatlieu {
        +Manvl: VARCHAR [PK]
        +Tennvl: VARCHAR
        +Dvt: VARCHAR
        +Giavon: DECIMAL
    }

    class Sanpham {
        +Masp: VARCHAR [PK]
        +Tensp: VARCHAR
        +Madm: INT [FK]
        +Dvt: VARCHAR
        +Giaban: DECIMAL
        +getAllWithCategory(): array
        +getByIdWithCategory(id: VARCHAR): array
        +create(data: array): boolean
        +update(id: VARCHAR, data: array): boolean
    }

    class Congthucsanpham {
        +Masp: VARCHAR [PK, FK]
        +Manvl: VARCHAR [PK, FK]
        +Soluong: DECIMAL
        +getByProduct(Masp: VARCHAR): array
        +getAllDetailed(): array
        +createOrUpdate(data: array): boolean
        +delete(Masp: VARCHAR, Manvl: VARCHAR): boolean
    }
}

package "vlxd_manufacturing" {
    class Lenhsanxuat {
        +Malenh: VARCHAR [PK]
        +Masp: VARCHAR [FK]
        +Ngaysanxuat: DATE
        +Soluongsanxuat: DECIMAL
        +Trangthai: VARCHAR
        +Ngaybatdau: DATE
        +Ngayketthuc: DATE
        +Ghichu: TEXT
        +getProductionOrders(): array
        +getOrderDetails(id: VARCHAR): array
        +createProductionOrder(data: array): boolean
        +completeProduction(Malenh: VARCHAR, Makho: VARCHAR): boolean
    }

    class Chitiet_XuatNVL_Sanxuat {
        +Id: INT [PK]
        +Malenh: VARCHAR [FK]
        +Manvl: VARCHAR [FK]
        +Soluong: DECIMAL
        +exportMaterialFromStock(): boolean
    }

    class Chitiet_NhapSanpham_Sanxuat {
        +Id: INT [PK]
        +Malenh: VARCHAR [FK]
        +Makho: VARCHAR [FK]
        +Masp: VARCHAR [FK]
        +Soluong: DECIMAL
        +importProductToStock(): boolean
    }
}

package "vlxd_customer" {
    class Loaikhachhang {
        +Maloaikh: INT [PK]
        +Tenloaikh: VARCHAR
        +Motaloaikh: TEXT
        +getDiscountPolicy(): decimal
    }

    class Khachhang {
        +Makh: VARCHAR [PK]
        +Tenkh: VARCHAR
        +Sdtkh: VARCHAR
        +Diachikh: VARCHAR
        +Maloaikh: INT [FK]
        +getPurchaseHistory(): array
        +getDebtAmount(): decimal
    }
}

package "vlxd_warehouse" {
    class Kho {
        +Makho: VARCHAR [PK]
        +Tenkho: VARCHAR
        +Diachi: TEXT
        +getWarehouses(): array
        +createWarehouse(data: array): boolean
    }

    class Tonkho_nvl {
        +Makho: VARCHAR [PK, FK]
        +Manvl: VARCHAR [PK, FK]
        +Soluongton: DECIMAL
        +increaseStock(qty: DECIMAL): void
        +decreaseStock(qty: DECIMAL): boolean
    }

    class Tonkho_sp {
        +Makho: VARCHAR [PK, FK]
        +Masp: VARCHAR [PK, FK]
        +Soluongton: DECIMAL
        +increaseStock(qty: DECIMAL): void
        +decreaseStock(qty: DECIMAL): boolean
        +isAvailable(qty: DECIMAL): boolean
    }

    class Phieudieuchuyen {
        +Madieuchuyen: VARCHAR [PK]
        +Khoxuat: VARCHAR [FK]
        +Khonhap: VARCHAR [FK]
        +Ngaydieuchuyen: DATE
        +Ghichu: TEXT
        +Trangthai: VARCHAR
        +getTransfers(): array
        +getTransfer(id: VARCHAR): array
        +executeTransfer(id: VARCHAR): boolean
    }

    class Chitiet_Phieudieuchuyen {
        +Id: INT [PK]
        +Madieuchuyen: VARCHAR [FK]
        +Masp: VARCHAR [FK]
        +Soluong: DECIMAL
        +getTransferDetails(): array
    }

    class Phieunhap {
        +Manhaphang: VARCHAR [PK]
        +Mancc: VARCHAR [FK]
        +Makho: VARCHAR [FK]
        +Ngaynhaphang: DATE
        +Tongtiennhap: DECIMAL
        +Ghichu: TEXT
        +getImportReceipts(): array
        +getImportReceipt(id: VARCHAR): array
        +createImportReceipt(data: array): boolean
        +deleteImportReceipt(id: VARCHAR): boolean
    }

    class Chitiet_Phieunhap {
        +Id: INT [PK]
        +Manhaphang: VARCHAR [FK]
        +Manvl: VARCHAR [FK]
        +Soluong: DECIMAL
        +Dongianhap: DECIMAL
        +getSubTotal(): decimal
    }

    class Phieuxuat {
        +Maxuathang: VARCHAR [PK]
        +Makh: VARCHAR [FK]
        +Makho: VARCHAR [FK]
        +Ngayxuat: DATE
        +Tongtienxuat: DECIMAL
        +Ghichu: TEXT
        +getExportReceipts(): array
        +getExportReceipt(id: VARCHAR): array
        +createExportReceipt(data: array): boolean
    }

    class Chitiet_Phieuxuat {
        +Id: INT [PK]
        +Maxuathang: VARCHAR [FK]
        +Masp: VARCHAR [FK]
        +Soluong: DECIMAL
        +Dongiaxuat: DECIMAL
        +getLineTotal(): decimal
    }
}

package "vlxd_user" {
    class Nguoidung {
        +Manv: VARCHAR [PK]
        +Tendangnhap: VARCHAR
        +Matkhau: VARCHAR
        +Hovaten: VARCHAR
        +Email: VARCHAR
        +Vaitro: VARCHAR
        +login(username: VARCHAR, pass: VARCHAR): boolean
        +getByUsername(username: VARCHAR): array
        +create(data: array): boolean
        +update(id: VARCHAR, data: array): boolean
        +checkPermission(resource: VARCHAR): boolean
    }
}

' ----- Bill of Materials (M-N qua bảng liên kết) -----
Sanpham "1" -- "*" Congthucsanpham
Nguyenvatlieu "1" -- "*" Congthucsanpham

' ----- Master - Detail trong từng chứng từ -----
Lenhsanxuat *-- Chitiet_XuatNVL_Sanxuat
Lenhsanxuat *-- Chitiet_NhapSanpham_Sanxuat
Phieudieuchuyen *-- Chitiet_Phieudieuchuyen
Phieunhap *-- Chitiet_Phieunhap
Phieuxuat *-- Chitiet_Phieuxuat

' ----- Phân loại (customer) + danh mục (product) -----
Danhmucsp "1" o-- "*" Sanpham
Loaikhachhang "1" o-- "*" Khachhang

' ----- Kho và tồn (Makho, Manvl/Masp là khóa tồn) -----
Kho "1" o-- "*" Tonkho_nvl
Kho "1" o-- "*" Tonkho_sp
Nguyenvatlieu "1" -- "*" Tonkho_nvl
Sanpham "1" -- "*" Tonkho_sp

' ----- Liên kết nghiệp vụ xuyên package (FK) -----
Nhacungcap "1" -- "*" Phieunhap
Sanpham "1" -- "*" Lenhsanxuat
Khachhang "1" -- "*" Phieuxuat

Kho "1" -- "*" Phieunhap
Kho "1" -- "*" Phieuxuat

' Hai FK tới cùng bảng Kho (vai trò xuất / nhập)
Phieudieuchuyen "*" --> "1" Kho : Khoxuat
Phieudieuchuyen "*" --> "1" Kho : Khonhap

Sanpham "1" -- "*" Chitiet_Phieudieuchuyen
Sanpham "1" -- "*" Chitiet_Phieuxuat
Nguyenvatlieu "1" -- "*" Chitiet_Phieunhap

' manufacturing chi tiết -> product / warehouse
Nguyenvatlieu "1" -- "*" Chitiet_XuatNVL_Sanxuat
Sanpham "1" -- "*" Chitiet_NhapSanpham_Sanxuat
Kho "1" -- "*" Chitiet_NhapSanpham_Sanxuat

' ----- Hành vi ảnh hưởng tồn kho (dependency, không phải FK tĩnh) -----
Lenhsanxuat ..> Congthucsanpham : <<uses BOM>>
Chitiet_XuatNVL_Sanxuat ..> Tonkho_nvl : <<decreases>>
Chitiet_NhapSanpham_Sanxuat ..> Tonkho_sp : <<increases>>
Chitiet_Phieunhap ..> Tonkho_nvl : <<increases>>
Chitiet_Phieuxuat ..> Tonkho_sp : <<decreases>>

note right of Nguoidung
  **Ghi chú:** có thể bổ sung liên kết tới
  chứng từ (vd. người lập phiếu) nếu
  nghiệp vụ yêu cầu — hiện tách riêng
  module xác thực.
end note

@enduml
